completed members page

--- a/index.html
+++ b/index.html
@@ -59,18 +59,20 @@
           <!-- <li> <a href="#announce"><h5>Announcements</h5></a></li> -->
           <li class="dropdown"><a href="category.html"><span><h5>Members</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="search-result.html">Search Result</a></li>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li><a href="current-members.html">Current Members</a></li>
+              <li><a href="past-members.html">Past Members</a></li>
+              <li><a href="current-members.html">M.Tech Students</a></li>
+              <li><a href="current-members.html">Visiting students</a></li>
+              <li class="dropdown"><a href="#"><span>Interns</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
+                  <li><a href="#">Nptel Interns</a></li>
+                  <li><a href="#">Summer Interns</a></li>
                  
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
+              <!-- <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">Drop Down 4</a></li> -->
             </ul>
           </li>
           <li class="dropdown"><a href="category.html"><span><h5>Publications</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
