--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li> <a href="#announce"><h5>Announcements</h5></a></li> -->
-          <li class="dropdown"><a href="category.html"><span><h5>Members</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="cat"><span><h5>Members</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="current-members.html">Current Members</a></li>
               <li><a href="past-members.html">Past Members</a></li>
-              <li><a href="current-members.html">M.Tech Students</a></li>
-              <li><a href="current-members.html">Visiting students</a></li>
+              <li><a href="mtechStudents.html">M.Tech Students</a></li>
+              <li><a href="visiting-students.html">Visiting students</a></li>
               <li class="dropdown"><a href="#"><span>Interns</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="#">Nptel Interns</a></li>
@@ -75,11 +75,11 @@
               <li><a href="#">Drop Down 4</a></li> -->
             </ul>
           </li>
-          <li class="dropdown"><a href="category.html"><span><h5>Publications</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="publications.html"><span><h5>Publications</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="search-result.html">Search Result</a></li>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li><a href="search-result.html">Award Winning Papers</a></li>
+              <li><a href="#">Journal Papers</a></li>
+              <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
@@ -87,10 +87,12 @@
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              </li> -->
+              <li><a href="#">Conference Papers</a></li>
+              <li><a href="#">Book Chapters</a></li>
+              <li><a href="#">Authored Books</a></li>
+              <li><a href="#">Edited Books</a></li>
+              
             </ul>
           </li>
           <li class="dropdown"><a href="category.html"><span><h5>Products</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -111,8 +113,8 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="category.html"><span><h5>Patents</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
+          <li class="dropdown"><a href="category.html"><span><h5>Patents</h5></span> </i></a>
+            <!-- <ul>
               <li><a href="search-result.html">Search Result</a></li>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -127,7 +129,7 @@
               <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-            </ul>
+            </ul> -->
           </li>
           <li class="dropdown"><a href="category.html"><span><h5>Projects</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
