--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+    <div class="container-fluid d-flex align-items-center">
       
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
@@ -54,7 +54,7 @@
       </a>
       <br>
   
-      <nav id="navbar" class="navbar">
+      <nav id="navbar" class="navbar mx-auto">
         <ul>
           <!-- <li> <a href="#announce"><h5>Announcements</h5></a></li> -->
           <li class="dropdown"><a href="cat"><span><h5>Members</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -208,7 +208,7 @@
         </div><!-- End Search Form -->
 
       </div>
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="index.html" class="logo d-flex ms-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <img id="swan-logo" src="https://cse.iitkgp.ac.in/~smisra/swan/SWAN-Logo.png" alt="swan-logo">
@@ -223,7 +223,7 @@
 
     <!-- ======= Hero Slider Section ======= -->
     <section id="hero-slider" class="hero-slider">
-      <h1 id="swan-heading">Smart Wireless Applications & Networking </h1> 
+      <h1 id="swan-heading" class="text-black">Smart Wireless Applications & Networking </h1> 
       <br><br>
       <div class="container-md" data-aos="fade-in">
         <div class="row">
@@ -290,7 +290,7 @@
             <section id="facts" class="facts">
               <div class="container" data-aos="fade-up">
                 <div class="section-header d-flex justify-content-between align-items-center mb-5">
-                  <h1>We are a group of</h1>
+                  <h1 class="text-black">We are a group of</h1>
                   <div><a href="products.html" class="more">More info</a></div>
                 </div>
                 <div class="row">
