--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
       <nav id="navbar" class="navbar mx-auto">
         <ul>
           <!-- <li> <a href="#announce"><h5>Announcements</h5></a></li> -->
-          <li class="dropdown"><a href="cat"><span><h5>Members</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="current-members.html"><span><h5>Members</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="current-members.html">Current Members</a></li>
               <li><a href="past-members.html">Past Members</a></li>
@@ -131,7 +131,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul> -->
           </li>
-          <li class="dropdown"><a href="products.html"><span><h5>Projects</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="projects.html"><span><h5>Projects</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="search-result.html">Search Result</a></li>
               <li><a href="#">Drop Down 1</a></li>
@@ -149,7 +149,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="products.html"><span><h5>Sponsors</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="sponsors.html"><span><h5>Sponsors</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="search-result.html">Search Result</a></li>
               <li><a href="#">Drop Down 1</a></li>
@@ -223,7 +223,7 @@
   <main id="main">
     <section>
       <div id="pdt-container">
-        <div class="row m-0">
+        <div class="row justify-content-center ">
 
           <div  class="col-md-9" data-aos="fade-up">
             <h3 class="category-title">Our Products</h3>
@@ -319,7 +319,7 @@
             </div>
           </div>
 
-          <div class="col-md-3">
+          <!-- <div class="col-md-3"> -->
             <!-- ======= Sidebar ======= -->
             <!-- <div class="aside-block">
 
@@ -452,7 +452,7 @@
                     <span class="author mb-3 d-block">Jenny Wilson</span>
                   </div> -->
 
-                </div> <!-- End Latest -->
+                </div> End Latest
 <!-- 
               </div>
             </div>
