previous code before merge

--- a/projects.html
+++ b/projects.html
@@ -222,7 +222,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                   <div class="course-item">
                     <a href="project_templtes/project-1.html">
-                      <img src="assets/img/iot_images/agri-1.jpg" class="img-fluid" alt="...">
+                      <img src="assets/img/iot_images/agri-1.jpg" class="img-fluid"  h-9 w-10 alt="...">
                     </a>
                     <div class="course-content">
                       <div class="d-flex justify-content-between align-items-center mb-3">
@@ -251,7 +251,7 @@
                 <!-- project-2 -->
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="course-item">
-                      <img id="tribe-img" src="assets/img/project_img/tribeConnect.png" class="img-fluid" alt="...">
+                      <img  id="tribe-img" src="assets/img/project_img/tribeConnect.png" class="img-fluid" h-9 w-10 alt="...">
                       <div class="course-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">TribeConnectIntegrated Smart Tribal Eco-Platform -- A Proof of Concept in Chattisgarh</p>
@@ -279,7 +279,7 @@
                   <!-- Project-3 -->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="course-item">
-                      <img src="assets/img/iot_images/health.jpg" class="img-fluid" alt="...">
+                      <img src="assets/img/iot_images/health.jpg" class="img-fluid"  h-9 w-10  alt="...">
                       <div class="course-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">AI and Virtual Reality Modelling</p>
@@ -306,7 +306,7 @@
 
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="course-item">
-                      <img src="assets/img/project_img/industrial-iot.jpg" class="img-fluid" alt="...">
+                      <img src="assets/img/project_img/industrial-iot.jpg" class="img-fluid"  h-9 w-10  alt="...">
                       <div class="course-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">Unified Software-Defined Architecture for Industrial Internet of Things</p>
@@ -332,7 +332,7 @@
                   </div> <!-- End Course Item-->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="course-item">
-                      <img src="assets/img/project_img/ambuSens-2.png" class="img-fluid" alt="...">
+                      <img src="assets/img/project_img/ambuSens-2.png" class="img-fluid"  h-9 w-10  alt="...">
                       <div class="course-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category"> Ambulatory Sensing and Point-of-Care Recommendation for IoT-Based Healthcare</p>
@@ -359,7 +359,7 @@
 
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="course-item">
-                      <img src="assets/img/project_img/fogcity.jpg" class="img-fluid" alt="...">
+                      <img src="assets/img/project_img/fogcity.jpg" class="img-fluid"  h-9 w-10 alt="...">
                       <div class="course-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">Fog City: QoS-Aware Resource Management for Smart Cities  </p>
@@ -387,7 +387,7 @@
                     <!-- Project-7 -->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="course-item">
-                      <img src="assets/img/project_img/airQualityMonitoring.png" class="img-fluid" alt="...">
+                      <img src="assets/img/project_img/airQualityMonitoring.png" class="img-fluid"  h-9 w-10  alt="...">
                       <div class="course-content">
                         <div class="d-flex justify-content-between align-items-center mb-3">
                           <p class="category">Air Quality Monitoring</p>
@@ -415,7 +415,7 @@
                   <!-- project-8 -->
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="course-item">
-                        <img id="tribe-img" src="assets/img/project_img/heavyMcIot.jpg" class="img-fluid" alt="...">
+                        <img id="tribe-img" src="assets/img/project_img/heavyMcIot.jpg" class="img-fluid"  h-9 w-10  alt="...">
                         <div class="course-content">
                           <div class="d-flex justify-content-between align-items-center mb-3">
                             <p class="category">Remote Monitoring and Real-Time Control of  Stir Welding </p>
@@ -443,7 +443,7 @@
                     <!-- Project-9 -->
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="course-item">
-                        <img src="assets/img/project_img/safe.jpg" class="img-fluid" alt="...">
+                        <img src="assets/img/project_img/safe.jpg" class="img-fluid"  h-9 w-10  alt="...">
                         <div class="course-content">
                           <div class="d-flex justify-content-between align-items-center mb-3">
                             <p class="category">SAFE: Secure and Usable IoT Ecosystem</p>
@@ -471,7 +471,7 @@
                     <!-- Project-10 -->
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="course-item">
-                        <img src="assets/img/project_img/Underwater-Wireless-Sensor-Network.png" class="img-fluid" alt="...">
+                        <img src="assets/img/project_img/Underwater-Wireless-Sensor-Network.png" class="img-fluid"  h-9 w-10  alt="...">
                         <div class="course-content">
                           <div class="d-flex justify-content-between align-items-center mb-3">
                             <p class="category"> Improved Underwater Surveillance Using Experimental Multimedia Sensor Network (UEM)</p>
@@ -499,7 +499,7 @@
                     <!-- Project-11 -->
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="course-item">
-                        <img src="assets/img/project_img/Crop-Health-Monitoring.jpg" class="img-fluid" alt="...">
+                        <img src="assets/img/project_img/Crop-Health-Monitoring.jpg" class="img-fluid"  h-9 w-10  alt="...">
                         <div class="course-content">
                           <div class="d-flex justify-content-between align-items-center mb-3">
                             <p class="category">An Integrated Autonomous UAV and WSN-based System for Crop Water Management and Crop Condition Monitoring</p>
@@ -527,7 +527,7 @@
                     <!-- Project-12 -->
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                       <div class="course-item">
-                        <img src="assets/img/project_img/digiMine.jpg" class="img-fluid" alt="...">
+                        <img src="assets/img/project_img/digiMine.jpg" class="img-fluid"   h-9 w-10 alt="...">
                         <div class="course-content">
                           <div class="d-flex justify-content-between align-items-center mb-3">
                             <p class="category">Development of Digital Mine using Internet of Things</p>
