--- a/product-pg-5.html
+++ b/product-pg-5.html
@@ -136,69 +136,32 @@
       <div id="pdt-container">
         <div class="row justify-content-center ">
           <div  class="col-md-9" data-aos="fade-up">
-            <h3 id="current-members-titles">Our Products</h3>
+            <!-- <h3 id="current-members-titles">Our Products </h3> -->
 
             <!-- Pdt-item -->
             <div id="product-item" class="d-md-flex post-entry-2 half">
               <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
-                <img id="pdt-img" src="assets/img/Products/agrisens.png" alt="" class="img-fluid">
+                <img id="pdt-img" src="assets/img/Products/bi.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://agrisys.iitkgp.ac.in">AgriSens: Sensor-Based Networking System for Improved Water Management of Irrigated Crops</a></h4>
+                  <h4><a href="https://cse.iitkgp.ac.in/~smisra/swan/tre/macosim.html">Big-Sensor-Cloud Platform</a></h4>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
 
-            <!-- Pdt-item -->
-            <div id="product-item" class="d-md-flex post-entry-2 half">
-              <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
-                <img id="pdt-img" src="assets/img/Products/ambusens.png" alt="" class="img-fluid">
-              </a>
-                <div id="pdt-info">
-                  <h4><a href="http://ambusens.iitkgp.ac.in/">AmbuSens: Ubiquitous Healthcare Monitoring for the Connected Era</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
-                </div>
-            </div>
-            <!-- End Pdt-item -->
-
-            <!-- Pdt-item -->
-            <div id="product-item" class="d-md-flex post-entry-2 half">
-              <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
-                <img id="pdt-img" src="assets/img/Products/underwater.png" alt="" class="img-fluid">
-              </a>
-                <div id="pdt-info">
-                  <h4><a href="http://agrisys.iitkgp.ac.in">Underwater Wireless Acoustic Sensor Nodes for Multimedia Streaming</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
-                </div>
-            </div>
-            <!-- End Pdt-item -->
-
-            <!-- Pdt-item -->
-            <div id="product-item" class="d-md-flex post-entry-2 half">
-              <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
-                <img id="pdt-img" src="assets/img/Products/jaltarang_localization_gui.png" alt="" class="img-fluid">
-              </a>
-                <div id="pdt-info">
-                  <h4><a href="http://agrisys.iitkgp.ac.in">Jaltarang: A NS-3 based Underwater Sensor Network Simulator</a></h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
-                </div>
-            </div>
-            <!-- End Pdt-item -->
-
+           
             <div class="text-start py-4 d-flex justify-content-center">
               <div class="custom-pagination">
-                  <a href="#" class="prev" id="prev">Prev</a>
-                  <a href="product-pg1.html" class="active" data-page="1">1</a>
-                  <a href="product-pg2.html" data-page="2">2</a>
-                  <a href="product-pg3.html" data-page="3">3</a>
-                  <a href="product-pg4.html" data-page="4">4</a>
-                  <a href="product-pg5.html" data-page="5">5</a>
-                  <a href="#" class="next" id="next">Next</a>
+                <a href="product-pg4.html" class="prev" id="prev"><i class="ri-arrow-left-s-line"></i>Previous</a>
+                <a href="products.html" class="active">1</a>
+                <a href="product-pg2.html">2</a>
+                <a href="product-pg3.html">3</a>
+                <a href="product-pg4.html">4</a>
+                <a href="#">5</a>
+                
               </div>
-          </div>
-
-
+            </div>
 
         </div>
       </div>
@@ -299,66 +262,6 @@
 
   </footer>
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-     const paginationLinks = document.querySelectorAll(".custom-pagination a");
-     const prevLink = document.getElementById("prev");
-     const nextLink = document.getElementById("next");
- 
-     let currentPage = parseInt(document.querySelector(".custom-pagination a.active").dataset.page);
- 
-     paginationLinks.forEach(link => {
-         if (!link.classList.contains("prev") && !link.classList.contains("next")) {
-             link.addEventListener("click", function(event) {
-                 event.preventDefault();
-                 const page = parseInt(this.dataset.page);
-                 updateActivePage(page);
-                 loadPage(page);
-             });
-         }
-     });
- 
-     prevLink.addEventListener("click", function(event) {
-         event.preventDefault();
-         if (currentPage > 1) {
-             const prevPage = currentPage - 1;
-             updateActivePage(prevPage);
-             loadPage(prevPage);
-         }
-     });
- 
-     nextLink.addEventListener("click", function(event) {
-         event.preventDefault();
-         if (currentPage < paginationLinks.length - 2) {
-             const nextPage = currentPage + 1;
-             updateActivePage(nextPage);
-             loadPage(nextPage);
-         }
-     });
- 
-     function updateActivePage(pageNumber) {
-         paginationLinks.forEach(link => {
-             link.classList.remove("active");
-         });
-         const link = document.querySelector(`.custom-pagination a[data-page="${pageNumber}"]`);
-         if (link) {
-             link.classList.add("active");
-             currentPage = pageNumber;
-         }
-     }
- 
-     function loadPage(pageNumber) {
-         const link = document.querySelector(`.custom-pagination a[data-page="${pageNumber}"]`);
-         if (link) {
-             window.location.href = link.href;
-         }
-     }
- });
- 
- 
-   </script>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
