--- a/product-pg2.html
+++ b/product-pg2.html
@@ -136,15 +136,15 @@
       <div id="pdt-container">
         <div class="row justify-content-center ">
           <div  class="col-md-9" data-aos="fade-up">
-            <h3 id="current-members-titles">Our Products</h3>
+            <!-- <h3 id="current-members-titles">Our Products </h3> -->
 
             <!-- Pdt-item -->
             <div id="product-item" class="d-md-flex post-entry-2 half">
               <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
-                <img id="pdt-img" src="assets/img/Products/agrisens.png" alt="" class="img-fluid">
+                <img id="pdt-img" src="assets/img/Products/macosim_topology.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://agrisys.iitkgp.ac.in">AgriSens: Sensor-Based Networking System for Improved Water Management of Irrigated Crops</a></h4>
+                  <h4><a href="https://cse.iitkgp.ac.in/~smisra/swan/tre/macosim.html">MAcoSim: Matlab-based Acoustic Underwater Simulator</a></h4>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
                 </div>
             </div>
@@ -153,10 +153,10 @@
             <!-- Pdt-item -->
             <div id="product-item" class="d-md-flex post-entry-2 half">
               <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
-                <img id="pdt-img" src="assets/img/Products/ambusens.png" alt="" class="img-fluid">
+                <img id="pdt-img" src="assets/img/Products/GWS.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://ambusens.iitkgp.ac.in/">AmbuSens: Ubiquitous Healthcare Monitoring for the Connected Era</a></h4>
+                  <h4><a href="http://ambusens.iitkgp.ac.in/">Generic Wireless Sensor Network Kit v1.0</a></h4>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
                 </div>
             </div>
@@ -165,10 +165,10 @@
             <!-- Pdt-item -->
             <div id="product-item" class="d-md-flex post-entry-2 half">
               <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
-                <img id="pdt-img" src="assets/img/Products/underwater.png" alt="" class="img-fluid">
+                <img id="pdt-img" src="assets/img/Products/pwsn.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://agrisys.iitkgp.ac.in">Underwater Wireless Acoustic Sensor Nodes for Multimedia Streaming</a></h4>
+                  <h4><a href="http://agrisys.iitkgp.ac.in">Physiological Wireless Sensor Network Kit</a></h4>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
                 </div>
             </div>
@@ -177,28 +177,29 @@
             <!-- Pdt-item -->
             <div id="product-item" class="d-md-flex post-entry-2 half">
               <a href="http://agrisys.iitkgp.ac.in" target="_blank" >
-                <img id="pdt-img" src="assets/img/Products/jaltarang_localization_gui.png" alt="" class="img-fluid">
+                <img id="pdt-img" src="assets/img/Products/agriwsn.png" alt="" class="img-fluid">
               </a>
                 <div id="pdt-info">
-                  <h4><a href="http://agrisys.iitkgp.ac.in">Jaltarang: A NS-3 based Underwater Sensor Network Simulator</a></h4>
+                  <h4><a href="http://agrisys.iitkgp.ac.in">Agricultural Wireless Sensor Network Kit</a></h4>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas</p>
                 </div>
             </div>
             <!-- End Pdt-item -->
+
+           
+            
 
             <div class="text-start py-4 d-flex justify-content-center">
               <div class="custom-pagination">
-                  <a href="#" class="prev" id="prev">Prev</a>
-                  <a href="product-pg1.html" class="active" data-page="1">1</a>
-                  <a href="product-pg2.html" data-page="2">2</a>
-                  <a href="product-pg3.html" data-page="3">3</a>
-                  <a href="product-pg4.html" data-page="4">4</a>
-                  <a href="product-pg5.html" data-page="5">5</a>
-                  <a href="#" class="next" id="next">Next</a>
+                <a href="products.html" class="prev " id="prev"><i class="ri-arrow-left-s-line"></i>Previous</a>
+                <a href="products.html" class="active">1</a>
+                <a href="#">2</a>
+                <a href="product-pg3.html">3</a>
+                <a href="product-pg4.html">4</a>
+                <a href="product-pg-5.html">5</a>
+                <a href="product-pg3.html" class="next" id="next">Next <i class="ri-arrow-right-s-line"></i></a>
               </div>
-          </div>
-
-
+            </div>
 
         </div>
       </div>
@@ -299,7 +300,6 @@
 
   </footer>
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
