--- a/products.html
+++ b/products.html
@@ -194,7 +194,7 @@
                   <a href="product-pg3.html" data-page="3">3</a>
                   <a href="product-pg4.html" data-page="4">4</a>
                   <a href="product-pg5.html" data-page="5">5</a>
-                  <a href="#" class="next" id="next">Next</a>
+                  <a href="product-pg2.html" class="next" id="next">Next</a>
               </div>
           </div>
 
@@ -303,7 +303,7 @@
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Products pagination logic -->
-  <script src="js/script.js"></script>
+  <!-- <script src="js/script.js"></script> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
