--- a/product-pg3.html
+++ b/product-pg3.html
@@ -304,7 +304,7 @@
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   
   <!-- Product pagination -->
- <script src="js/script.js"></script>
+ <!-- <script src="js/script.js"></script> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
