--- a/product-pg4.html
+++ b/product-pg4.html
@@ -302,7 +302,7 @@
   </footer>
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <!-- Product pagination -->
- <script src="js/script.js"></script>
+ <!-- <script src="js/script.js"></script> -->
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
