--- a/public/liveData.html
+++ b/public/liveData.html
@@ -123,7 +123,7 @@
   </header>
   <!-- Live Data section -->
   <div class="container mt-5">
-    <h1 id="iot_heading" class="text-center">IoT Lab Sensor Data</h1>
+    <h1 id="iot_heading" class="text-center">SWAN Lab Live Data</h1>
     <h2 id="lab-heading">Lab-1 Data</h2>
     <div class="row">
       <div class="col-md-6">
