--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   * Author: intern.com
   * License: https:///intern.com/license/
   ======================================================== -->
+  <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -431,7 +432,7 @@
                 West Bengal, India, 721 302</li> <br>
               <li><strong>Phone:</strong>+91-3222-282338</li>
               <li><strong>Email:</strong> sudip@iitkgp.ac.in</li>
-              <li><strong>Website:</strong>https://cse.iitkgp.ac.in/~smisra/</li>
+              <li><strong>Website:</strong><a href="https://cse.iitkgp.ac.in/~smisra/" style="color: #ffffff;"> https://cse.iitkgp.ac.in/~smisra/ </a></li>
             </ul>
           </div>
           <div class="col-6 col-lg-2">
@@ -478,10 +479,6 @@
             </div>
 
             <div class="credits">
-              <!-- All the links in the footer should remain intact. -->
-              <!-- You can delete the links only if you purchased the pro version. -->
-              <!-- Licensing information: https://intern.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: https://intern.com/herobiz-bootstrap-business-template/ -->
               Designed by <a href="https://intern.com/">intern</a>
             </div>
 
@@ -516,6 +513,22 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Navbar Highlight Logic -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const currentPath = window.location.pathname.split('/').pop();
+        const navbarLinks = document.querySelectorAll('#navbar ul li a');
+
+        navbarLinks.forEach(link => {
+            const href = link.getAttribute('href').split('/').pop();
+            if (href === currentPath) {
+                link.parentElement.classList.add('active');
+            }
+        });
+    });
+</script>
+
 
 </body>
 
