--- a/journalPapers.html
+++ b/journalPapers.html
@@ -11,6 +11,9 @@
   
  <!-- Favicons -->
  <link href="assets/img/SWAN-Logo.png" rel="icon">
+
+ <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
  
  <!-- Timeline Styles -->
  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -27,6 +30,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  
 
   <!-- Template Main CSS Files -->
   <link href="assets/css/variables.css" rel="stylesheet">
@@ -270,7 +274,7 @@
               West Bengal, India, 721 302</li> <br>
             <li><strong>Phone:</strong>+91-3222-282338</li>
             <li><strong>Email:</strong> sudip@iitkgp.ac.in</li>
-            <li><strong>Website:</strong>https://cse.iitkgp.ac.in/~smisra/</li>
+            <li><strong>Website:</strong><a href="https://cse.iitkgp.ac.in/~smisra/" style="color: #ffffff;"> https://cse.iitkgp.ac.in/~smisra/ </a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-2">
@@ -356,6 +360,21 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+    <!-- Navbar Highlight Logic -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+          const currentPath = window.location.pathname.split('/').pop();
+          const navbarLinks = document.querySelectorAll('#navbar ul li a');
+  
+          navbarLinks.forEach(link => {
+              const href = link.getAttribute('href').split('/').pop();
+              if (href === currentPath) {
+                  link.parentElement.classList.add('active');
+              }
+          });
+      });
+  </script>
 
 </body>
 
