--- a/product-pg4.html
+++ b/product-pg4.html
@@ -227,7 +227,7 @@
                 West Bengal, India, 721 302</li> <br>
               <li><strong>Phone:</strong>+91-3222-282338</li>
               <li><strong>Email:</strong> sudip@iitkgp.ac.in</li>
-              <li><strong>Website:</strong>https://cse.iitkgp.ac.in/~smisra/</li>
+              <li><strong>Website:</strong><a href="https://cse.iitkgp.ac.in/~smisra/" style="color: #ffffff;"> https://cse.iitkgp.ac.in/~smisra/ </a></li>
             </ul>
           </div>
           <div class="col-6 col-lg-2">
@@ -313,6 +313,20 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
+    <!-- Navbar Highlight Logic -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+          const currentPath = window.location.pathname.split('/').pop();
+          const navbarLinks = document.querySelectorAll('#navbar ul li a');
+  
+          navbarLinks.forEach(link => {
+              const href = link.getAttribute('href').split('/').pop();
+              if (href === currentPath) {
+                  link.parentElement.classList.add('active');
+              }
+          });
+      });
+  </script>
 </body>
 
 </html>
