--- a/public/liveData.html
+++ b/public/liveData.html
@@ -7,6 +7,9 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <!-- Bootstrap cdn -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- icon remix -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -200,5 +203,118 @@
         chart1.update(); chart2.update(); chart3.update(); chart4.update();
     });
   </script>
+   <!-- ======= Footer ======= -->
+   <footer id="footer" class="footer">
+
+    <div class="footer-content">
+      <div class="container">
+
+        <div class="row g-5">
+          <div class="col-lg-4">
+            <h3 class="footer-heading">Contact Information</h3>
+            <ul class="list-unstyled">
+              <li><strong>Address:</strong> Department of Computer Science and Engineering
+                Takshashila Building (2nd Floor)
+                Indian Institute of Technology, Kharagpur
+                West Bengal, India, 721 302</li> <br>
+              <li><strong>Phone:</strong>+91-3222-282338</li>
+              <li><strong>Email:</strong> sudip@iitkgp.ac.in</li>
+              <li><strong>Website:</strong><a href="https://cse.iitkgp.ac.in/~smisra/" style="color: #ffffff;"> https://cse.iitkgp.ac.in/~smisra/ </a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-lg-2">
+            <h3 class="footer-heading">Navigation</h3>
+            <ul class="footer-links list-unstyled">
+              <li><a href="index.html"><i class="bi bi-chevron-right"></i>Home</a></li>
+              <li><a href="current-members.html"><i class="bi bi-chevron-right"></i> Members</a></li>
+              <li><a href="awardPapers.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
+              <li><a href="products.html"><i class="bi bi-chevron-right"></i>Products</a></li>
+              <li><a href="projects.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
+              <li><a href="sponsors.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
+              <li><a href="gallery.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+              <li><a href="public/liveData.html"><i class="bi bi-chevron-right"></i>Live Data</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-lg-2">
+            <h3 class="footer-heading">Categories</h3>
+            <ul class="footer-links list-unstyled">
+              <li><a href="products.html"><i class="bi bi-chevron-right"></i>Agriculture</a></li>
+              <li><a href="products.html"><i class="bi bi-chevron-right"></i>Healthcare</a></li>
+              <li><a href="products.html"><i class="bi bi-chevron-right"></i>Stratups</a></li>
+              <li><a href="products.html"><i class="bi bi-chevron-right"></i>Technology</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-4">
+            <h3 class="footer-heading">Our Location</h3>
+            <div class="map-responsive">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.966855199038!2d87.30916497549563!3d22.317093242286134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1d441cac5ce34b%3A0x47b8c7f41815e553!2sTakshashila!5e0!3m2!1sen!2sin!4v1716382356987!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-legal">
+      <div class="container">
+
+        <div class="row justify-content-between">
+          <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+            <div class="copyright">
+              © Copyright <strong><span>Swan</span></strong>. All Rights Reserved
+            </div>
+
+            <div class="credits">
+              Designed by <a href="https://intern.com/">intern</a>
+            </div>
+
+          </div>
+            
+          <div class="col-md-6">
+            <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
+              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+  </footer>
+
+  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+    <!-- Navbar Highlight Logic -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+          const currentPath = window.location.pathname.split('/').pop();
+          const navbarLinks = document.querySelectorAll('#navbar ul li a');
+  
+          navbarLinks.forEach(link => {
+              const href = link.getAttribute('href').split('/').pop();
+              if (href === currentPath) {
+                  link.parentElement.classList.add('active');
+              }
+          });
+      });
+  </script>
+
 </body>
 </html>
