--- a/sponsors.html
+++ b/sponsors.html
@@ -371,29 +371,30 @@
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="../assets/vendor/aos/aos.js"></script>
-  <script src="../assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="../assets/js/main.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script> <!-- Ensure this path is correct -->
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <!-- Template M ain JS File -->
+  <script src="assets/js/main.js"></script>
 
-    <!-- Navbar Highlight Logic -->
-    <script>
-      document.addEventListener('DOMContentLoaded', function () {
-          const currentPath = window.location.pathname.split('/').pop();
-          const navbarLinks = document.querySelectorAll('#navbar ul li a');
-  
-          navbarLinks.forEach(link => {
-              const href = link.getAttribute('href').split('/').pop();
-              if (href === currentPath) {
-                  link.parentElement.classList.add('active');
-              }
-          });
-      });
-  </script>
+
+   <!-- Navbar Highlight Logic -->
+   <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const currentPath = window.location.pathname.split('/').pop();
+        const navbarLinks = document.querySelectorAll('#navbar ul li a');
+
+        navbarLinks.forEach(link => {
+            const href = link.getAttribute('href').split('/').pop();
+            if (href === currentPath) {
+                link.parentElement.classList.add('active');
+            }
+        });
+    });
+</script>
 
 </body>
 
